--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.3.7",
     "jade": "*",
-    "mongoose": "~3.6.18"
+    "mongoose": "~3.6.18",
+    "express-validator": "~0.8.0"
   }
 }
