--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "express": "3.3.7",
     "jade": "*",
     "mongoose": "~3.6.18",
-    "express-validator": "~0.8.0"
+    "express-validator": "~0.8.0",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "connect-flash": "~0.1.1",
+    "connect-ensure-login": "~0.1.1"
   }
 }
