--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
     "connect-flash": "~0.1.1",
-    "connect-ensure-login": "~0.1.1"
+    "connect-ensure-login": "~0.1.1",
+    "connect-mongo": "~0.3.3"
   }
 }
