--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport-local": "~0.1.6",
     "connect-flash": "~0.1.1",
     "connect-ensure-login": "~0.1.1",
-    "connect-mongo": "~0.3.3"
+    "connect-mongo": "~0.3.3",
+    "underscore": "~1.5.1"
   }
 }
