--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-flash": "~0.1.1",
     "connect-ensure-login": "~0.1.1",
     "connect-mongo": "~0.3.3",
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "async": "~0.2.9"
   }
 }
