--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "connect-ensure-login": "~0.1.1",
     "connect-mongo": "~0.3.3",
     "underscore": "~1.5.1",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "request": "~2.27.0",
+    "moment": "~2.1.0"
   }
 }
