--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "~2.1.0",
     "passport-instagram": "~0.1.2",
     "archiver": "~0.4.9",
-    "nodetime": "~0.8.13"
+    "nodetime": "~0.8.13",
+    "less": "~1.4.2"
   }
 }
